src/snapshots/nixfmt_rs__ast_format_tests__function_application.snap
---
source: src/ast_format_tests.rs
description: f x
---
Application
    [0;95;1m([0m Term
        [0;96;1m([0m Token
            [0;93;1m([0m Ann
                [0;35m{[0m preTrivia = fromList [0;36m[[0m[0;36m][0m
                [0;35m,[0m sourceLine = Pos [0;92;1m1[0m
                [0;35m,[0m value = Identifier [0;97;1m"[0m[0;94;1mf[0m[0;97;1m"[0m
                [0;35m,[0m trailComment = Nothing
                [0;35m}[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
    [0;95;1m([0m Term
        [0;96;1m([0m Token
            [0;93;1m([0m Ann
                [0;35m{[0m preTrivia = fromList [0;36m[[0m[0;36m][0m
                [0;35m,[0m sourceLine = Pos [0;92;1m1[0m
                [0;35m,[0m value = Identifier [0;97;1m"[0m[0;94;1mx[0m[0;97;1m"[0m
                [0;35m,[0m trailComment = Nothing
                [0;35m}[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
